--- a/app/src/main/res/layout/activity_pantallaestadisticapapel.xml
+++ b/app/src/main/res/layout/activity_pantallaestadisticapapel.xml
@@ -170,7 +170,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/white"
-            android:text="Actualizar"
+            android:text="Atras"
+            android:onClick="pantallaregistropapel"
             android:textColor="@color/black"
             android:textSize="25sp" />
     </LinearLayout>
