--- a/app/src/main/res/layout/activity_pantallaestadisticaplastico.xml
+++ b/app/src/main/res/layout/activity_pantallaestadisticaplastico.xml
@@ -171,7 +171,7 @@
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/white"
             android:text="Atras"
-            android:onClick="pantallaestadisticageneral"
+            android:onClick="RegistroPlastico"
             android:textColor="@color/black"
             android:textSize="25sp" />
     </LinearLayout>
