--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,8 @@
     <array name="array_papel">
         <item>Seleccionar material</item>
         <item>Papel</item>
+        <item>Plástico</item>
+        <item>Vidrio</item>
     </array>
     <array name="array_plastico">
         <item>Seleccionar material</item>
