--- a/app/src/main/res/layout/activity_pantallaregistropapel.xml
+++ b/app/src/main/res/layout/activity_pantallaregistropapel.xml
@@ -22,10 +22,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
-            android:text="Registro del Reciclaje"
+            android:text="Registro de Reciclaje"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="30sp"/>
         <EditText
             android:id="@+id/editTextCantidad"
             android:layout_width="match_parent"
